libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/use-glob-not-star.jsonc
//@ run: fail
//@ description: any ident that isn't `*` should fail
[
  "::kernel::special_form::use",
  "::math",
  "X",
  //~^ ERROR expected `*`, a tuple of names, or a struct of aliases
  "x"
]
